# app/controllers/api/v1/members/items_controller.rb
@@ -3,7 +3,9 @@ class Api::V1::Members::ItemsController < ApplicationController
 
   def index
     page = params[:page].to_i.positive? ? params[:page].to_i : 1
-    @items = Item.published.order(created_at: :desc).page(page).per(PER_PAGE)
+    @items = Item.published.includes(:item_categories)
+    @items = @items.joins(:item_categories).where(item_categories: { id: params[:item_category_id] }) if params[:item_category_id].present?
+    @items = @items.order(created_at: :desc).page(page).per(PER_PAGE)
   end
 
   def show
